You'll find all changes made in the versions here:

VERSION 0.1.4: (23.02.2016)
	- Trains
		* Have own speed
		* Changing direction when reaching the end of a line 

VERSION 0.1.3: (17.02.2016)
	- Game window with own window-bar
	- Trains and template Trains
 		* Train buy dialog
		* Moving trains
	- Bug fixes
		* Window management
		* Line system
		* CityView
	- Technical stuff
		* Implemented observer pattern for window controls
		* Simplified the `METRO` class and the train/line overseer classes
	
	REVISIONS:
		r2: (17.11.2015)
			- Train buy dialog
				* Player can buy trains
				* information about trains in list
				* list of lines with assigned trains
			- Bug fixes in window management
			
		r1: (11.11.2015)
			- Train buy dialog
			- Bug fixes in window management

VERSION 0.1.2: (30.08.2015)
(mainly features from #8; for implementation-ideas see #13)
	- Train line dialog with a list of all lines, buttons and settings
	- Player can create, edit and remove lines with the corresponding buttons
	- Remove a node of a line with a second click
	- Lines are drawn within their colors
	- Project has now a documentation (#16)
	  (http://hauke-stieler.de/public/METRO/doc/)
	- UML-like diagrams where added
	  (http://hauke-stieler.de/public/METRO/diagrams/)


VERSION 0.1.1: (10.07.2015)
	- Implemented settings-window (#6)
	- Merged City- and Train-view
	- Created some new controls:
		* Inputfield (#5)
		* Checkbox (#10)
	- fixed some drawing issues (#9,#11)
	- Rearranged the RailwayNode-system (also because of #11)
	- Changed the package order a bit
	

VERSION 0.1.0: (26.03.2015)
	- Using LibGDX instead of java.awt
	- Renamed packages
	- New Toolbar-buttons
		* create new train
		* show train-list

VERSION 0.0.2:
	- Some bug-fixes
	- Train Management
		* build train stations
		* built tracks
		* automatic and optimized way of tracks
	- Windows
		* drag windows
		* some design changes
		* changes in the way controls were placed