@@ -3,7 +3,12 @@ You'll find all changes made in the versions here:
 VERSION 0.1.4: (23.02.2016)
 	- Trains
 		* Have own speed
-		* Changing direction when reaching the end of a line 
+		* Changing direction when reaching the end of a line
+		* Unique images for every train model
+		* Waits on signal if other train is in front of it
+	- Nodes
+		* Act as signal for trains
+	- The toolbar is now at the top as one screen wide bar
 
 VERSION 0.1.3: (17.02.2016)
 	- Game window with own window-bar
